[package]
name = "zint-sys"
version = "0.1.0"
edition = "2021"
description = "Unsafe Rust bindings for the Zint barcode encoding library"
readme = "README.md"
homepage = "https://www.zint.org.uk/"
repository = "https://github.com/Hermitter/zint-sys"
license = "MIT OR Apache-2.0"
authors = ["Hermitter"]
keywords = ["barcode", "barcode-generator", "ffi", "codegen"]
categories = ["api-bindings"]
links = "zint"
exclude = ["flake.*", "rust-toolchain.toml", ".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
image = "0.24.6"
blake3 = "1.4.1"
libc = "0.2.147"

[build-dependencies]
bindgen = "0.66"
